packages/desktop/src-tauri/src/commands/snapshots/annot__commands__clipboard_test__drawing_xml_all_emitters.snap
---
source: src/commands/clipboard_test.rs
assertion_line: 158
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<a:graphic xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main"><a:graphicData uri="http://schemas.openxmlformats.org/drawingml/2006/lockedCanvas"><lc:lockedCanvas xmlns:lc="http://schemas.openxmlformats.org/drawingml/2006/lockedCanvas"><a:nvGrpSpPr><a:cNvPr id="0" name=""/><a:cNvGrpSpPr/></a:nvGrpSpPr><a:grpSpPr><a:xfrm><a:off x="0" y="0"/><a:ext cx="7620000" cy="5715000"/><a:chOff x="0" y="0"/><a:chExt cx="7620000" cy="5715000"/></a:xfrm></a:grpSpPr><a:sp><a:nvSpPr><a:cNvPr id="2" name="R2"/><a:cNvSpPr/></a:nvSpPr><a:spPr><a:xfrm><a:off x="95250" y="190500"/><a:ext cx="952500" cy="762000"/></a:xfrm><a:prstGeom prst="rect"><a:avLst/></a:prstGeom><a:solidFill><a:srgbClr val="FFEEAA"><a:alpha val="50000"/></a:srgbClr></a:solidFill><a:ln w="38100"><a:solidFill><a:srgbClr val="FF0000"/></a:solidFill></a:ln></a:spPr></a:sp><a:sp><a:nvSpPr><a:cNvPr id="3" name="R3"/><a:cNvSpPr/></a:nvSpPr><a:spPr><a:xfrm><a:off x="1143000" y="190500"/><a:ext cx="952500" cy="762000"/></a:xfrm><a:prstGeom prst="roundRect"><a:avLst/></a:prstGeom><a:noFill/><a:ln w="25400"><a:solidFill><a:srgbClr val="0000FF"/></a:solidFill></a:ln></a:spPr></a:sp><a:sp><a:nvSpPr><a:cNvPr id="4" name="E4"/><a:cNvSpPr/></a:nvSpPr><a:spPr><a:xfrm><a:off x="2381250" y="190500"/><a:ext cx="952500" cy="762000"/></a:xfrm><a:prstGeom prst="ellipse"><a:avLst/></a:prstGeom><a:noFill/><a:ln w="38100"><a:solidFill><a:srgbClr val="00FF00"/></a:solidFill></a:ln></a:spPr></a:sp><a:cxnSp><a:nvCxnSpPr><a:cNvPr id="5" name="L5"/><a:cNvCxnSpPr/></a:nvCxnSpPr><a:spPr><a:xfrm><a:off x="95250" y="1428750"/><a:ext cx="1905000" cy="952500"/></a:xfrm><a:prstGeom prst="line"><a:avLst/></a:prstGeom><a:ln w="38100"><a:solidFill><a:srgbClr val="FF0000"/></a:solidFill><a:tailEnd type="triangle" w="med" len="med"/></a:ln></a:spPr></a:cxnSp><a:sp><a:nvSpPr><a:cNvPr id="6" name="M6"/><a:cNvSpPr/></a:nvSpPr><a:spPr><a:xfrm><a:off x="3710940" y="2758440"/><a:ext cx="198120" cy="198120"/></a:xfrm><a:prstGeom prst="roundRect"><a:avLst><a:gd name="adj" fmla="val 10000"/></a:avLst></a:prstGeom><a:solidFill><a:srgbClr val="FF0000"/></a:solidFill><a:ln w="14288"><a:solidFill><a:srgbClr val="FFFFFF"/></a:solidFill></a:ln></a:spPr><a:txSp><a:txBody><a:bodyPr anchor="ctr" lIns="0" tIns="0" rIns="0" bIns="0" wrap="none"><a:normAutofit/></a:bodyPr><a:lstStyle/><a:p><a:pPr algn="ctr"/><a:r><a:rPr lang="en-US" sz="975" b="1"><a:solidFill><a:srgbClr val="FFFFFF"/></a:solidFill></a:rPr><a:t>1</a:t></a:r></a:p></a:txBody><a:useSpRect/></a:txSp></a:sp><a:sp><a:nvSpPr><a:cNvPr id="7" name="T7"/><a:cNvSpPr txBox="1"/></a:nvSpPr><a:spPr><a:xfrm><a:off x="95250" y="3810000"/><a:ext cx="1905000" cy="476250"/></a:xfrm><a:prstGeom prst="roundRect"><a:avLst><a:gd name="adj" fmla="val 5000"/></a:avLst></a:prstGeom><a:solidFill><a:srgbClr val="FFFFC8"><a:alpha val="92157"/></a:srgbClr></a:solidFill><a:ln w="9525"><a:solidFill><a:srgbClr val="BFBFBF"/></a:solidFill></a:ln></a:spPr><a:txSp><a:txBody><a:bodyPr wrap="square" rtlCol="0" lIns="91440" tIns="45720" rIns="91440" bIns="45720"/><a:lstStyle/><a:p><a:r><a:rPr lang="ja-JP" sz="1800" dirty="0"><a:solidFill><a:srgbClr val="000000"/></a:solidFill></a:rPr><a:t>Hello</a:t></a:r></a:p></a:txBody><a:useSpRect/></a:txSp></a:sp><a:sp><a:nvSpPr><a:cNvPr id="8" name="F8"/><a:cNvSpPr/></a:nvSpPr><a:spPr><a:xfrm><a:off x="0" y="0"/><a:ext cx="190500" cy="95250"/></a:xfrm><a:custGeom><a:avLst/><a:gdLst/><a:ahLst/><a:cxnLst/><a:rect l="0" t="0" r="190500" b="95250"/><a:pathLst><a:path w="190500" h="95250"><a:moveTo><a:pt x="0" y="0"/></a:moveTo><a:lnTo><a:pt x="95250" y="95250"/></a:lnTo><a:lnTo><a:pt x="190500" y="47625"/></a:lnTo></a:path></a:pathLst></a:custGeom><a:noFill/><a:ln w="25400" cap="rnd"><a:solidFill><a:srgbClr val="FF00FF"/></a:solidFill><a:round/></a:ln></a:spPr></a:sp><a:pic><a:nvPicPr><a:cNvPr id="9" name="Mosaic9"/><a:cNvPicPr><a:picLocks noChangeAspect="1"/></a:cNvPicPr></a:nvPicPr><a:blipFill><a:blip xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" r:embed="rId2"/><a:stretch><a:fillRect/></a:stretch></a:blipFill><a:spPr><a:xfrm><a:off x="4762500" y="3810000"/><a:ext cx="952500" cy="762000"/></a:xfrm><a:prstGeom prst="rect"><a:avLst/></a:prstGeom></a:spPr></a:pic></lc:lockedCanvas></a:graphicData></a:graphic>
