packages/desktop/src-tauri/src/commands/snapshots/annot__commands__clipboard_test__drawing_xml_with_screenshot.snap
---
source: src/commands/clipboard_test.rs
assertion_line: 170
expression: xml
---
<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
<a:graphic xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main"><a:graphicData uri="http://schemas.openxmlformats.org/drawingml/2006/lockedCanvas"><lc:lockedCanvas xmlns:lc="http://schemas.openxmlformats.org/drawingml/2006/lockedCanvas"><a:nvGrpSpPr><a:cNvPr id="0" name=""/><a:cNvGrpSpPr/></a:nvGrpSpPr><a:grpSpPr><a:xfrm><a:off x="0" y="0"/><a:ext cx="9753600" cy="7315200"/><a:chOff x="0" y="0"/><a:chExt cx="9753600" cy="7315200"/></a:xfrm></a:grpSpPr><a:pic><a:nvPicPr><a:cNvPr id="1000" name="Screenshot"/><a:cNvPicPr><a:picLocks noChangeAspect="1"/></a:cNvPicPr></a:nvPicPr><a:blipFill><a:blip xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" r:embed="rId2"/><a:stretch><a:fillRect/></a:stretch></a:blipFill><a:spPr><a:xfrm><a:off x="0" y="0"/><a:ext cx="9753600" cy="7315200"/></a:xfrm><a:prstGeom prst="rect"><a:avLst/></a:prstGeom></a:spPr></a:pic><a:sp><a:nvSpPr><a:cNvPr id="2" name="R2"/><a:cNvSpPr/></a:nvSpPr><a:spPr><a:xfrm><a:off x="95250" y="190500"/><a:ext cx="952500" cy="762000"/></a:xfrm><a:prstGeom prst="rect"><a:avLst/></a:prstGeom><a:solidFill><a:srgbClr val="FFEEAA"><a:alpha val="50000"/></a:srgbClr></a:solidFill><a:ln w="38100"><a:solidFill><a:srgbClr val="FF0000"/></a:solidFill></a:ln></a:spPr></a:sp></lc:lockedCanvas></a:graphicData></a:graphic>
